--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,37 @@
     <groupId>revolut</groupId>
     <artifactId>etransfer-engine</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>etransfer-dao</module>
+        <module>etransfer-domain-model</module>
+    </modules>
     <packaging>pom</packaging>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.12</version>
+                <scope>test</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.5.1</version>
+                    <configuration>
+                        <source>1.8</source>
+                        <target>1.8</target>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 
 </project>
