Added main-app module with Jersey, Grizzly plugin to intake account CRUD requests through rest controller

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>etransfer-domain-model</module>
         <module>etransfer-dao</module>
         <module>etransfer-service</module>
+        <module>etransfer-main-app</module>
     </modules>
     <packaging>pom</packaging>
 
